fixed overlap when rendering error message

--- a/frontend/src/components/StudentForm.module.css
+++ b/frontend/src/components/StudentForm.module.css
@@ -64,7 +64,9 @@
 }
 
 .infoBar {
-  height: 24px;
+  display: flex;
+  flex-direction: column;
+  height: auto;
 }
 
 .form,
